--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -47,7 +47,7 @@
                         <h2 class="name">JESSICA</h2>
                         <h4 class="profession">Master Stylist</h4>
 
-                        <p>Hi! I'm Jessica, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+                        <p>Hi! I'm Jessica! I am from Detroit, MI and have been a hairstylist for 10 years! I specialize in extensions and hair color.</p>
 
                         <div class="social">
                             <i class="fab fa-facebook-f"></i>
@@ -71,7 +71,7 @@
                         <h2 class="name">CHLOE</h2>
                         <h4 class="profession">Elite Stylist</h4>
 
-                        <p>Hi! I'm Chloe, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+                        <p>Hi! I'm Chloe! I am from Atlanta, GA and have been a hair stylist for 5 years. I specialize in healthy hair and braids.</p>
 
                         <div class="social">
                             <i class="fab fa-facebook-f"></i>
@@ -95,7 +95,7 @@
                         <h2 class="name">MIAMOR</h2>
                         <h4 class="profession">Rising Star</h4>
 
-                        <p>Hi! I'm Miamor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+                        <p>Hi! I'm Miamor! I am from Brooklyn, NY and have been a stylist for 3 years. I specialize in hair color and extensions.</p>
 
                         <div class="social">
                             <i class="fab fa-facebook-f"></i>
