--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -137,8 +137,15 @@
                             <option value="Extensions">Extensions</option>
                             <option value="Box Braids">Box Braids</option>
                             <option value="Wash and Style" >Wash and Style</option>
-                            <option value="Full Color" >LAX</option>
-                            <option value="Partial Color">SAN</option>
+                            <option value="Full Color" >Full Color</option>
+                            <option value="Microlinks">Microlinks</option>
+                            <option value="Hair Cut">Hair Cut</option>
+                            <option value="Kids Style">Kids Style</option>
+                            <option value="Wash/Style" >Wash/Style</option>
+                            <option value="Kids Wash/Style" >Kids Wash/Style</option>
+                            <option value="Basic Style">Basic Style</option>
+                            <option value="Partial Color">Partial Color</option>
+                            <option value="Consultation">Consultation</option>
                         </select>
                     </td>
                     <td>
