--- a/views/appts/index.ejs
+++ b/views/appts/index.ejs
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" class="new-appt-bg">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>A Touch of Class</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-</head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>A Touch of Class</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="/stylesheets/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> </head>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">A TOUCH OF CLASS</a>
-            </button>
-            <div class="collapse navbar-collapse">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/appts">Appointments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
-                </li>
-				<li class="nav-item">
-					<a class="nav-link" href="/reviews">Reviews</a>
-				  </li>
-            </div>
-      </nav>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">A TOUCH OF CLASS</a> </button>
+		<div class="collapse navbar-collapse">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"> <a class="nav-link" href="/appts">Appointments</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a> </li>
+				<li class="nav-item"> <a class="nav-link" href="/reviews">Reviews</a> </li>
+		</div>
+	</nav>
 </header>
 
-
-
 <body>
-
-
-
-    <h1>Appointments</h1><br>
+	<h1>Appointments</h1>
+	<br>
 	<table id="reviewForm2" id="flight-index">
 		<thead>
 			<th scope="col">Stylist</th>
@@ -56,54 +44,48 @@
 						<%= appt.stylist %>
 					</td>
 					<td class="date">
-						<a href="/appts/<%= appt._id %>"><%= appt.service %></a>
+						<a href="/appts/<%= appt._id %>">
+							<%= appt.service %>
+						</a>
 					</td>
-					<td> 
-						<%= appt.date %>
-						</td>
 					<td>
-					<%= appt.comment %>	
-						</td>	
-						<td>
+						<%= appt.date %>
+					</td>
+					<td>
+						<%= appt.comment %>
+					</td>
+					<td>
 						<form action="/appts/<%= appt._id %>?_method=DELETE" method="POST" id="deleteAppt">
-							<button type="submit" form="deleteAppt" class="btn btn-danger"><i class="far fa-trash-alt"></i></button></td>
-						
-							</form>
+							<button type="submit" form="deleteAppt" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+					</td>
+					</form>
 					</td>
 				</tr>
 				<% } else { %>
 					<tr>
-					<td class="date">
-						<%= appt.stylist %>
-					</td>
-					<td class="date">
-						<a href="/appts/<%= appt._id %>"><%= appt.service %></a>
-					</td>
-					<td> 
-						<%= appt.date %>
+						<td class="date">
+							<%= appt.stylist %>
 						</td>
-					<td>
-					<%= appt.comment %>	
-						</td>	
+						<td class="date">
+							<a href="/appts/<%= appt._id %>">
+								<%= appt.service %>
+							</a>
+						</td>
 						<td>
-						<form action="/appts/<%= appt._id %>?_method=DELETE" method="POST" id="deleteAppt">
-							<button type="submit" form="deleteAppt" class="btn btn-danger"><i class="far fa-trash-alt"></i></button></td>
-						
-							</form>
-					</td>
-				</tr>
+							<%= appt.date %>
+						</td>
+						<td>
+							<%= appt.comment %>
+						</td>
+						<td>
+							<form action="/appts/<%= appt._id %>?_method=DELETE" method="POST" id="deleteAppt">
+								<button type="submit" form="deleteAppt" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+						</td>
+						</form>
+						</td>
+					</tr>
 					<% }}); %>
 		</tbody>
 	</table>
-
-
-
-
-
-
-
-
-    
-    
 </body>
 </html>
