--- a/views/appts/show.ejs
+++ b/views/appts/show.ejs
@@ -1,43 +1,47 @@
 <%- include('../partials/header.ejs') %>
 
+	<body>
+		<h1>Update Appointment</h1>
+		<br>
+		<form action='/appts/<%= appt._id%>?_method=PUT' method='POST'>
+			<table id="reviewForm2">
+				<thead>
+					<tr>
+						<th>Stylist</th>
+						<th>Service</th>
+						<th>Date</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<select name="stylist">
+								<option value="Jessica">Jessica</option>
+								<option value="Chloe">Chloe</option>
+								<option value="Miamor">Miamor</option>
+							</select>
+						</td>
+						<td>
+							<select name="service">
+								<option value="Extensions">Extensions</option>
+								<option value="Box Braids">Box Braids</option>
+								<option value="Wash and Style">Wash and Style</option>
+								<option value="Full Color">LAX</option>
+								<option value="Partial Color">SAN</option>
+							</select>
+						</td>
+						<td>
+							<input type="datetime-local" name="date" value="2021-03-22T15:30" min="2021-03-22T00:00" max="2022-03-22T00:00"> </td>
+						<br> </tbody>
+			</table>
+			<label>Is there anything you would like your stylist to know?</label>
+			<br>
+			<textarea name="comment" row="4" style="width: 18rem;">
+				<% appt.description %>
+			</textarea>
+			<br>
+			<input type="submit" value="Submit" /> </form>
+		</form>
+	</body>
 
-<body>
-    <h1>Update Appointment</h1><br>
-    <form action='/appts/<%= appt._id%>?_method=PUT' method='POST'>
-        <table id="reviewForm2">
-            <thead>
-                <tr>
-                    <th>Stylist</th>
-                    <th>Service</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <select name="stylist">
-                            <option value="Jessica">Jessica</option>
-                            <option value="Chloe">Chloe</option>
-                            <option value="Miamor">Miamor</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="service">
-                            <option value="Extensions">Extensions</option>
-                            <option value="Box Braids">Box Braids</option>
-                            <option value="Wash and Style" >Wash and Style</option>
-                            <option value="Full Color" >LAX</option>
-                            <option value="Partial Color">SAN</option>
-                        </select>
-                    </td>
-                    <td>
-                        <input type="datetime-local" name="date" value="2021-03-22T15:30" min="2021-03-22T00:00" max="2022-03-22T00:00">
-                         </td><br>
-            </tbody>
-        </table>
-        <label>Is there anything you would like your stylist to know?</label><br>
-                         <textarea name="comment" row="4" style="width: 18rem;"><% appt.description %></textarea><br> 
-         <input type="submit" value="Submit" />  </form>
-    </form>
-</body>
-</html>
+	</html>
