--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
 <div class="hero" style="background-image: url(https://assets.teenvogue.com/photos/5c9b70e0c9fe12685208059f/master/w_1600%2Cc_limit/413552F1-74C8-4703-BD60-3255342BCF29.JPG)">
   <div class="hero__content">
-    <h1>Where Beauty meets Class.</h1>
+    <h1>Where Beauty Meets Class.</h1>
 
 
     <a class="btn" href="/appts/new">Start here</a>
