--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> </head>
 <header>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">A TOUCH OF CLASS</a> </button>
-		<div class="collapse navbar-collapse">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">A TOUCH OF CLASS</a> 
+		<div class="">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"> <a class="nav-link" href="/appts">Appointments</a> </li>
 				<li class="nav-item"> <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a> </li>
