--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">A TOUCH OF CLASS</a>
-            </button>
-            <div class="collapse navbar-collapse">
+            <div class="">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="/appts">Appointments</a>
