--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -23,7 +23,7 @@
 
 <body>
 	<h1 class="animate__animated animate__backInRight">Meet the team</h1>
-	<br> </div>
+	<br><h4>Click each photo for info on our stylists!</h4> </div>
 	
     
     
