--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -92,8 +92,7 @@
               <img 
               height="50"
               id="avatar"
-              src="<%= user.avatar ? user.avatar :
-               'http://theoldreader.com/kittens/300/300/' %>"
+              src="<%= user.avatar %>"
               alt=""
             > 
             </div><br>
